fix delete font size collapse

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ button{
     width: 40px ;
     padding-right: 5px;
     padding-left: 4px;
+    font-size: 13px;
     
 
 }
